--- a/about/index.html
+++ b/about/index.html
@@ -3,8 +3,9 @@ layout: default
 ---
 <div class="main-content">
     <article class="module color-3">
-            <h1>Just another about page</h1>
+            <h1>thestevenbell's blog</h1>
             <hr>
-            <p>Some info about you or this page.</p>
+            <p>I'm a full-stack web developer and hardware/IoT maker in Atlanta, Georgia specializing the MEAN stack and Rails.
+            Graduate of General Assembly full-time web design immersive.  </p>
     </article>
 </div>
