updated tags text to be more responsive

--- a/about/index.html
+++ b/about/index.html
@@ -3,9 +3,9 @@ layout: default
 ---
 <div class="main-content">
     <article class="module color-3">
-            <h1>thestevenbell's blog</h1>
+            <h1>devicurious</h1>
+            <h2>Authored by Steven Bell</h2>
             <hr>
-            <p>I'm a full-stack web developer and hardware/IoT maker in Atlanta, Georgia specializing the MEAN stack and Rails.
-            Graduate of General Assembly full-time web design immersive.  </p>
+            <p>I’m an Atlanta-based full-stack web developer and maker with roots in research science, agribusiness and landscape design. As a developer, I use my attention to detail, creativity and analytical skills to solve complex business problems.  I am currently available for full time web and mobile development work.  </p>
     </article>
 </div>
